# ChangeLog for dev-perl/Net-DNS
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.131 2008/12/31 16:51:09 tove Exp $

*Net-DNS-0.64 (31 Dec 2008)

  31 Dec 2008; Torsten Veller <tove@gentoo.org> +Net-DNS-0.64.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Net-DNS-0.53-r1.ebuild,
  -Net-DNS-0.57.ebuild, -Net-DNS-0.58.ebuild, -Net-DNS-0.59.ebuild,
  -Net-DNS-0.60.ebuild:
  Cleanup

  24 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org> Net-DNS-0.63.ebuild:
  ppc stable, bug #203074

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> Net-DNS-0.63.ebuild:
  Stable on ppc64; bug #203074

  24 Apr 2008; Raúl Porcel <armin76@gentoo.org> Net-DNS-0.63.ebuild:
  alpha/ia64 stable wrt #203074

  23 Apr 2008; Markus Meier <maekke@gentoo.org> Net-DNS-0.63.ebuild:
  amd64/x86 stable, security bug #203074

  23 Apr 2008; Jeroen Roovers <jer@gentoo.org> Net-DNS-0.63.ebuild:
  Stable for HPPA (bug #203074).

  23 Apr 2008; Ferris McCormick <fmccor@gentoo.org> Net-DNS-0.63.ebuild:
  Sparc stable, Security Bug #203074. All tests successful (except for the
  ones skipped).

*Net-DNS-0.63 (23 Apr 2008)

  23 Apr 2008; Torsten Veller <tove@gentoo.org> +Net-DNS-0.63.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Net-DNS-0.61.ebuild:
  Stable for HPPA too.

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> Net-DNS-0.61.ebuild:
  ppc. stable

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Net-DNS-0.61.ebuild:
  amd64 stable

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> Net-DNS-0.61.ebuild:
  Stable on ppc64

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> Net-DNS-0.61.ebuild:
  Stable on mips.

  10 Nov 2007; Raúl Porcel <armin76@gentoo.org> Net-DNS-0.61.ebuild:
  alpha/ia64/sparc/x86 stable

*Net-DNS-0.61 (19 Aug 2007)

  19 Aug 2007; Yuval Yaari <yuval@gentoo.org> +Net-DNS-0.61.ebuild: