@@ -2,8 +2,10 @@ AUX Net-DNS-0.64-ar.patch 353 RMD160 68670243547d7480475e3126c2e213e4fb47f045 SH
 DIST Net-DNS-0.61.tar.gz 145400 RMD160 1ccfae25e7d39c58915592745452fec7a8358e15 SHA1 56a6eaba303e45035ab71f47c0ccc14eafbc1bad SHA256 1837a47bb0510e15d590500d94cdca605fcf89e0c88f061127b9b81982e5679b
 DIST Net-DNS-0.63.tar.gz 149488 RMD160 da8bc35bb37fcf99d7201c56c44296e2e92bb533 SHA1 58fa1272706067e7e0e56d53ee52e8ffff492fbe SHA256 335ff2eb615c443e09e1b4a0afaabb78a208fd62648e0a550f056c3521cf5cdf
 DIST Net-DNS-0.64.tar.gz 158368 RMD160 09632566949ab49c471b63b71c16c2118e4751c2 SHA1 0b473cf9797075ac14ae190d958cb9e440a66953 SHA256 629aa22db69c7a24ec01bc7c19679f538d653b9fa8d8e2cdc88f19476f698cf6
+DIST Net-DNS-0.65.tar.gz 157633 RMD160 69e8dbf5536905b851305ef0f11952df737b9229 SHA1 cbda6a5bf7fbf7fd160266625b5a1c672ea0c8f0 SHA256 eefc554ed7adaeb824373235d85313d0a0aeca373913deb6568f8d95b6c81ad7
 EBUILD Net-DNS-0.61.ebuild 739 RMD160 c4448af6e4649b02eacda8d7477bdfa0efb0e298 SHA1 b720df99b2c911ae8857a48172891fba8946bdd7 SHA256 f3aa9b52ba9ed5744bd98d3cf8ae4e8686a07f715df67847ebabc17bb68e3e43
 EBUILD Net-DNS-0.63.ebuild 679 RMD160 4273f760b8dea31f8cf4caad19014eeaf1411c40 SHA1 e008c3f1c8e914e5fb5e9edabed460edf6beb090 SHA256 405c1dd1a569066c8c0f5a59d8c267c647afdfd23938d9bebcbbee345be27a77
 EBUILD Net-DNS-0.64.ebuild 750 RMD160 6e28e9ef974c62861a0f5553085d66a841f7a749 SHA1 8b93218790c9980e2aa3dd715d924d6d66a99c3f SHA256 293ce7ba77567cbe1b7693834bf3e8ede05d895cc01da4b83395ee5c5a649c14
-MISC ChangeLog 16045 RMD160 35eecd7520379b9bd95bf852c80f61d641eba559 SHA1 8a884c4a76746bf946547d836065bfe9073e5606 SHA256 3df406b589f58560a3a4c63b30ec31f508f0c454fee61950a0c6676b13e0dd7f
+EBUILD Net-DNS-0.65.ebuild 769 RMD160 34e4411c9737c5df7bb145cf50e7dd521404739f SHA1 62c300661938a689c3a70f3454ecad5f900cbe4f SHA256 f65002ceb756ba648db759c7a3f27f3da5dbe883abbeb32fd553beb8706808aa
+MISC ChangeLog 16160 RMD160 6d027e6e944ca78baa413765827e7ee6dbcdab14 SHA1 6d72ba6280df5ec522f863430f17ced948ee8d23 SHA256 db640b85d44646f0e10e7f8ae5c088425da2ef84bf9f9066de434dbe21d7c6ba
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
